--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <img src="img/Prancheta 1-100.jpg" alt="">
             </div>
             <div class="content">
-                <h3>unique and <span class="line-down">creative</span> designs</h3>
+                <h3>A <span class="line-down">cereja </span>do seu visual.</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto nisi fugit saepe quisquam adipisci. Consectetur ipsum cumque beatae accusantium similique mollitia commodi, atque laborum, id, eos illo recusandae!</p>
                 <a href="#" class="btn">Saiba Mais</a>
             </div>
@@ -128,12 +128,12 @@
 
         <div class="box">
             <div class="image">
-                <img src="img/nail-polish-on-white-background-3609620-removebg-preview.png" alt="">
+                <img src="img/young-woman-in-glasses.jpg" alt="">
             </div>
             <div class="content">
-                <h3>experienced <span class="line-down">team</span> members</h3>
+                <h3>Profissionais<span class="line-down"> capacitadas </span> na área.</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto nisi fugit saepe quisquam adipisci. Consectetur ipsum cumque beatae accusantium similique mollitia commodi, atque laborum, id, eos illo recusandae!</p>
-                <a href="#" class="btn">read more</a>
+                <a href="#" class="btn">Saiba Mais</a>
             </div>
         </div>
 
@@ -142,9 +142,9 @@
                 <img src="img/arte 2-100.jpg" alt="">
             </div>
             <div class="content">
-                <h3>fully <span class="line-down">dynamic</span> and Responsive</h3>
+                <h3>Designs <span class="line-down">unicos</span>e personalizados</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto nisi fugit saepe quisquam adipisci. Consectetur ipsum cumque beatae accusantium similique mollitia commodi, atque laborum, id, eos illo recusandae!</p>
-                <a href="#" class="btn">read more</a>
+                <a href="#" class="btn">Saiba Mais</a>
             </div>
         </div>
 
@@ -172,7 +172,7 @@
             <h3>Basico</h3>
             <div class="price">
                 <div class="month">de graça</div>
-                <div class="year"><span>$</span>29.<span>99</span></div>
+                <div class="year"><span>$</span>2.<span>99</span></div>
             </div>
             <div class="list">
                 <p> <i class="fas fa-check"></i> 1 pessoa </p>
@@ -187,8 +187,8 @@
         <div class="box">
             <h3>Individual</h3>
             <div class="price">
-                <div class="month"><span>$</span>29.<span>99</span></div>
-                <div class="year"><span>$</span>59.<span>99</span></div>
+                <div class="month"><span>$</span>2.<span>99</span></div>
+                <div class="year"><span>$</span>5.<span>99</span></div>
             </div>
             <div class="list">
                 <p> <i class="fas fa-check"></i> 10 person </p>
@@ -237,21 +237,21 @@
             <img src="img/pexels-vinicius-wiesehofer.jpg" alt="">
            <p>"Super prático e confiável,uma ótima idéia pra facilitar o nosso dia-a-dia, e conseguir cuidar de si mesmo na correria!"</p>
             <h3>Gabrielle Silva</h3>
-            <span>cliente</span>
+            <span>Cliente</span>
         </div>
 
         <div class="slide">
             <img src="img/smilling-woman.jpg" alt="">
             <p>"Muito bom, excelentes profissionais e atendimento personalizado, agora estou sempre com manicure em dia!"</p>
             <h3>Pamela Pinho</h3>
-            <span>manicure</span>
+            <span>Manicure</span>
         </div>
 
         <div class="slide">
             <img src="img/young-woman-in-glasses.jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima libero ullam, facilis similique nam possimus obcaecati tempore sunt laboriosam alias?</p>
-            <h3>john deo</h3>
-            <span>designer</span>
+            <h3>Angela Garcia</h3>
+            <span>Manicure</span>
         </div>
 
 
@@ -268,11 +268,11 @@
 
 <section class="newsletter">
     <div class="content">
-        <h3>Quer saber<span class="line-down">de promoções </span>de manicure em primeira mão?</h3>
+        <h3>Quer saber<span class="line-down"> promoções </span> em primeira mão?</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo veniam odit repellat nostrum eius quaerat dolor, dolore possimus nihil optio?</p>
         <form action="">
             <input type="email" name="" placeholder="seu email" id="" class="email">
-            <input type="submit" value="Me notifique" class="btn">
+            <input type="submit" value="Me avise!" class="btn">
         </form>
         <p>já possui uma conta <a href="#">Entrar</a></p>
     </div>
